--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ajency Hiring</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/theme-styles.css">
     <link rel="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
 </head>
@@ -18,8 +18,21 @@
         </div>
     </header>
     <div class="main">
-        <div class="d-flex hero-section">
-           
+        <div class="container main-container d-flex flex-wrap hero-section">
+           <div class="left-side col-lg-6 order-2 order-lg-1 flex-column flex-lg-row p-0">
+               <h1 class="main-title">With us, you’ll design stuff that millions use, everyday!</h1>
+               <p class="subtitle">We are hiring for two roles</p>
+               <hr class="seperator">
+               <ul>
+                    <li>Senior UI & UX designer with 2-4 years experience</li>
+                    <li>UI designer with 1-2 years experience</li>
+               </ul>
+           </div>
+           <div class="right-side col-lg-6 order-1 order-lg-2 flex-column flex-lg-row p-0">
+               <div class="gif-container">
+                   <img src="assets/img/sample-image.png" alt="gif">
+               </div>
+           </div>
         </div>
     </div>
 </body>
