Job Description Section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="container main-container">
         <div class="header-wrapper">
-            <img src="assets/img/ajency-logo.png" alt="logo">
+            <a href="http://ajency.in/"><img src="assets/img/ajency-logo.png" alt="logo"></a>
         </div>
     </header>
     <div class="main">
@@ -33,6 +33,40 @@
                    <img src="assets/img/sample-image.png" alt="gif">
                </div>
            </div>
+        </div>
+        <div class="container d-flex flex-wrap flex-lg-nowrap main-container job-desc-section">
+            <div class="col-lg-6 flex-column flex-lg-row job-desc">
+                <div class="job-desc-wrapper">
+                    <h2 class="job-title">Senior UI & UX designer</h2>
+                    <p class="job-exp">2-4 years experience @ 70k/month</p>
+                    <ul>
+                        <li>Manage & mentor a team of 2 UI designers</li>
+                        <li>Present designs to clients</li> 
+                        <li>Plan and help execute visual design</li>
+                        <li>Develop sitemaps, detailed user flows,</li> 
+                        <li>Define visual style guides that reinforce</li> 
+                        <li>Lead the strategy and design work on</li>
+                        <li>Take a human-centric approach</li>
+                    </ul>
+                    <a href="mailto:talktous@ajency.in" class="btn">Write to us</a>
+                </div>
+            </div>
+            <div class="col-lg-6 flex-column flex-lg-row job-desc">
+                <div class="job-desc-wrapper">
+                    <h2 class="job-title">Senior UI & UX designer</h2>
+                    <p class="job-exp">2-4 years experience @ 70k/month</p>
+                    <ul>
+                        <li>Manage & mentor a team of 2 UI designers</li>
+                        <li>Present designs to clients</li> 
+                        <li>Plan and help execute visual design</li>
+                        <li>Develop sitemaps, detailed user flows,</li> 
+                        <li>Define visual style guides that reinforce</li> 
+                        <li>Lead the strategy and design work on</li>
+                        <li>Take a human-centric approach</li>
+                    </ul>
+                    <a href="mailto:talktous@ajency.in" class="btn">Write to us</a>
+                </div>
+            </div>
         </div>
     </div>
 </body>
