Static Image Sections

--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                </div>
            </div>
         </div>
+        <div class="container main-container black-section">
+            <img class=" d-none d-lg-block" src="assets/img/section-2.png" alt="section-2" width="100%">
+            <img class=" d-block d-lg-none" src="assets/img/section-2-mob.png" alt="section-2" width="100%">
+        </div>
+        <div class="container main-container hiring-team-section">
+            <img class=" d-none d-lg-block" src="assets/img/section-3.png" alt="section-3" width="100%">
+            <img class=" d-block d-lg-none" src="assets/img/section-3-mob.png" alt="section-3" width="100%">
+        </div>
+        <div class="container main-container video-section">
+            <img class=" d-none d-lg-block" src="assets/img/video-section.png" alt="video section" width="100%">
+            <img class=" d-block d-lg-none" src="assets/img/video-section-mob.png" alt="video section" width="100%">
+        </div>
         <div class="container d-flex flex-wrap flex-lg-nowrap main-container job-desc-section">
             <div class="col-lg-6 flex-column flex-lg-row job-desc">
                 <div class="job-desc-wrapper">
@@ -67,6 +79,10 @@
                     <a href="mailto:talktous@ajency.in" class="btn">Write to us</a>
                 </div>
             </div>
+        </div>
+        <div class="container main-container faq-section">
+            <img class=" d-none d-lg-block" src="assets/img/FAQ.png" alt="FAQ" width="100%">
+            <img class=" d-block d-lg-none" src="assets/img/FAQ-mob.png" alt="FAQ" width="100%">
         </div>
     </div>
 </body>
