--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajency Hiring</title>
+    <link href="assets/img/favicon.png" rel="icon" type="image/x-icon"/>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -69,7 +70,7 @@
             </div>
         </div>
         <div class="container icons-section">
-            <h4 class="icon-section-title ">& more to supersize your protfolio</h4>
+            <h4 class="icon-section-title ">& more to supersize your portfolio</h4>
             <div class="icon-container">
                 <div id="icon-slick" class="icon-slider">
                     <div class="item">
@@ -122,7 +123,7 @@
                         <li>Lead the strategy and design work on</li>
                         <li>Take a human-centric approach</li>
                     </ul>
-                    <a href="mailto:talktous@ajency.in" class="btn">Write to us</a>
+                    <a href="mailto:talktous@ajency.in" class="btn">Work with us</a>
                 </div>
             </div>
             <div class="col-lg-6 flex-column flex-lg-row job-desc">
@@ -138,7 +139,7 @@
                         <li>Lead the strategy and design work on</li>
                         <li>Take a human-centric approach</li>
                     </ul>
-                    <a href="mailto:talktous@ajency.in" class="btn">Write to us</a>
+                    <a href="mailto:talktous@ajency.in" class="btn">Work with us</a>
                 </div>
             </div>
         </div>
