Hero section changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="main">
-        <div class="container main-container d-flex flex-wrap hero-section">
+        <!-- <div class="container main-container d-flex flex-wrap hero-section">
            <div class="left-side col-lg-6 order-2 order-lg-1 flex-column flex-lg-row p-0">
                <h1 class="main-title">With us, you’ll design stuff that millions use, everyday!</h1>
                <p class="subtitle">We are hiring for two roles</p>
@@ -40,7 +40,25 @@
                    <img src="assets/img/sample-image.png" alt="gif">
                </div>
            </div>
-        </div>
+        </div> -->
+        <div class="container main-container d-flex flex-wrap hero-section new">
+            <div class="left-side col-lg-6 order-2 order-lg-1 flex-column flex-lg-row p-0">
+                <h1 class="d-none d-lg-block main-title">With us, you’ll design stuff that millions use, everyday!</h1>
+                <p class="subtitle">We are hiring for two roles</p>
+                <hr class="seperator">
+                <ul>
+                     <li>Senior UI & UX designer with 2-4 years experience</li>
+                     <li>UI designer with 1-2 years experience</li>
+                </ul>
+            </div>
+            <div class="right-side col-lg-6 order-1 order-lg-2 flex-column flex-lg-row p-0">
+                <div class="gif-container">
+                    <div class="bg-element"></div>
+                     <h1 class="d-block d-lg-none main-title">With us, you’ll design stuff that millions use, everyday!</h1>
+                    <img src="assets/img/sample-image-desk.png" alt="gif">
+                </div>
+            </div>
+         </div>
         <div class="container main-container black-section">
             <img class=" d-none d-lg-block" src="assets/img/section-2.png" alt="section-2" width="100%">
             <img class=" d-block d-lg-none" src="assets/img/section-2-mob.png" alt="section-2" width="100%">
@@ -128,8 +146,8 @@
             </div>
             <div class="col-lg-6 flex-column flex-lg-row job-desc">
                 <div class="job-desc-wrapper">
-                    <h2 class="job-title">Senior UI & UX designer</h2>
-                    <p class="job-exp">2-4 years experience @ 70k/month</p>
+                    <h2 class="job-title">UI designer</h2>
+                    <p class="job-exp">1-2 years experience @ 40k/month</p>
                     <ul>
                         <li>Manage & mentor a team of 2 UI designers</li>
                         <li>Present designs to clients</li> 
