Content and styling changes

--- a/index.html
+++ b/index.html
@@ -92,35 +92,36 @@
                 <div class="gif-container">
                     <div class="bg-element"></div>
                      <h1 class="d-block d-lg-none main-title">With us, you’ll design stuff that millions use, everyday!</h1>
-                    <img src="assets/img/sample-image-desk.png" alt="gif">
+                    <img class="banner-gif" lsrc="assets/img/banner.gif" alt="gif" style="display: none;">
                 </div>
             </div>
          </div>
         <div class="container main-container black-section">
-            <img class=" d-none d-lg-block" src="assets/img/section-2.png" alt="section-2" width="100%">
-            <img class=" d-block d-lg-none" src="assets/img/section-2-mob.png" alt="section-2" width="100%">
+            <img class=" d-none d-lg-block" src="assets/img/section-2.svg" alt="section-2" width="100%">
+            <img class=" d-block d-lg-none" src="assets/img/section-2-mob.svg" alt="section-2" width="100%">
         </div>
         <div class="container main-container hiring-team-section">
             <img class=" d-none d-lg-block" src="assets/img/section-3.png" alt="section-3" width="100%">
             <img class=" d-block d-lg-none" src="assets/img/section-3-mob.png" alt="section-3" width="100%">
         </div>
         <div class="container clients-section">
-            <h2 class="main-title ">We work with high impact clients that would look good on your resume</h2>
+            <h2 class="main-title d-none d-lg-block ">We work with high impact clients that would look good on your resume</h2>
+            <h2 class="main-title d-block d-lg-none">Work with high impact clients</h2>
             <div id="clients-slick" class="slider">
                 <div class="item">
                     <img class="item-logo" src="assets/img/cibil.svg">
-                    <img class="item-gif" src="assets/img/slider-gif.svg">
-                    <p>India's largest credit bureau with more data on users than Twitter & Youtube combined</p>
+                    <img class="item-gif" src="assets/img/CIBIL 2.svg">
+                    <p>India's largest credit bureau with more data on users than Twitter & Youtube combined.</p>
                 </div>
                 <div class="item">
                     <img class="item-logo" src="assets/img/HK.svg">
-                    <img class="item-gif" src="assets/img/slider-gif.svg">
-                    <p>Sequoia backed with $70 million in fundraise. At cross section of DTC, ecommerce, marketplace</p>
+                    <img class="item-gif" src="assets/img/HK 2.svg">
+                    <p>Healthkart is India’s leading nutrition and supplement platform. Backed by Sequoia & Intel Capital.</p>
                 </div>
                 <div class="item">
                     <img class="item-logo" src="assets/img/oyo.svg">
-                    <img class="item-gif" src="assets/img/slider-gif.svg">
-                    <p>Sequoia backed with $70 million in fundraise. At cross section of DTC, ecommerce, marketplace</p>
+                    <img class="item-gif" src="assets/img/oyo 2.svg">
+                    <p>A global travel tech company that connects its patrons and guests. Backed by Softbank & Microsoft.</p>
                 </div>
             </div>
         </div>
@@ -146,7 +147,7 @@
             <img class=" d-block d-lg-none" src="assets/img/video-section-mob.png" alt="video section" width="100%">
         </div>
         <div class="container process-section">
-            <h2 class="main-title ">Our Selection Process</h2>
+            <h2 class="main-title ">Our 7-Day Selection Process</h2>
             <div id="process-slick" class="slider">
                 <div class="item">
                     <img class="item-logo" src="assets/img/1.svg">
@@ -171,14 +172,12 @@
                     <p class="job-exp">2-4 years experience @ 70k/month</p>
                     <ul>
                         <li>Manage & mentor a team of 2 UI designers</li>
-                        <li>Present designs to clients</li> 
-                        <li>Plan and help execute visual design</li>
-                        <li>Develop sitemaps, detailed user flows,</li> 
-                        <li>Define visual style guides that reinforce</li> 
-                        <li>Lead the strategy and design work on</li>
-                        <li>Take a human-centric approach</li>
+                        <li>Present & advocate design to clients</li> 
+                        <li>Lead & strategize UI design projects</li>
+                        <li>Develop style guides, site-maps, user flows & interactive prototypes</li> 
+                        <li>Understand & advocate human-centric approach on projects</li>
                     </ul>
-                    <a href="mailto:talktous@ajency.in" class="btn">Work with us</a>
+                    <a href="mailto:talktous@ajency.in" class="btn float-button">Work with us</a>
                 </div>
             </div>
             <div class="col-lg-6 flex-column flex-lg-row job-desc">
@@ -186,22 +185,19 @@
                     <h2 class="job-title">UI designer</h2>
                     <p class="job-exp">1-2 years experience @ 40k/month</p>
                     <ul>
-                        <li>Manage & mentor a team of 2 UI designers</li>
-                        <li>Present designs to clients</li> 
-                        <li>Plan and help execute visual design</li>
-                        <li>Develop sitemaps, detailed user flows,</li> 
-                        <li>Define visual style guides that reinforce</li> 
-                        <li>Lead the strategy and design work on</li>
-                        <li>Take a human-centric approach</li>
+                        <li>Collaborate with designer in order to deliver high quality UI designs</li>
+                        <li>Take initiative to expand understanding of human-centric design principles</li> 
+                        <li>Help develop style guides, site-maps, user flows & interactive prototypes</li>
+                        <li>Have an understanding of graphic design principles to support project requirements</li>
                     </ul>
-                    <a href="mailto:talktous@ajency.in" class="btn">Work with us</a>
+                    <a href="mailto:talktous@ajency.in" class="btn float-button">Work with us</a>
                 </div>
             </div>
         </div>
-        <div class="container main-container faq-section">
+        <!-- <div class="container main-container faq-section">
             <img class=" d-none d-lg-block" src="assets/img/FAQ.png" alt="FAQ" width="100%">
             <img class=" d-block d-lg-none" src="assets/img/FAQ-mob.png" alt="FAQ" width="100%">
-        </div>
+        </div> -->
     </div>
 <script type="text/javascript" src="assets/js/slickJs.js" defer="defer"></script>
 </body>
