Mail to email updated

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                         <li>Develop style guides, site-maps, user flows & interactive prototypes</li> 
                         <li>Understand & advocate human-centric approach on projects</li>
                     </ul>
-                    <a href="mailto:talktous@ajency.in" class="btn float-button">Work with us</a>
+                    <a href="mailto:workwithus@ajency.in" class="btn float-button">Work with us</a>
                 </div>
             </div>
             <div class="col-lg-6 flex-column flex-lg-row job-desc">
@@ -190,7 +190,7 @@
                         <li>Help develop style guides, site-maps, user flows & interactive prototypes</li>
                         <li>Have an understanding of graphic design principles to support project requirements</li>
                     </ul>
-                    <a href="mailto:talktous@ajency.in" class="btn float-button">Work with us</a>
+                    <a href="mailto:workwithus@ajency.in" class="btn float-button">Work with us</a>
                 </div>
             </div>
         </div>
