--- a/index.html
+++ b/index.html
@@ -100,9 +100,23 @@
             <img class=" d-none d-lg-block" src="assets/img/section-2.svg" alt="section-2" width="100%">
             <img class=" d-block d-lg-none" src="assets/img/section-2-mob.svg" alt="section-2" width="100%">
         </div>
-        <div class="container main-container hiring-team-section">
-            <img class=" d-none d-lg-block" src="assets/img/section-3.png" alt="section-3" width="100%">
-            <img class=" d-block d-lg-none" src="assets/img/section-3-mob.png" alt="section-3" width="100%">
+        <div class="container main-container d-flex flex-wrap hiring-team-section">
+            <div class="container main-container">
+                <h3 class="d-block d-lg-none main-title">I’m hiring for my team</h3>
+                <hr class="d-block d-lg-none seperator">
+            </div>
+            <div class="left-side col-lg-6 order-2 order-lg-1 flex-column flex-lg-row p-0">
+                <h3 class="d-none d-lg-block main-title">I’m hiring for my team</h3>
+                <hr class="d-none d-lg-block seperator">
+                <div class="para">
+                    <p>Hi! I’m Karan Desai, Director Design @Ajency.in.</p>
+                    <p>In my 14 years of design career, I’ve been a design manager for 8 years and a business head for 3. My work encompasses UI & UX design, graphic design, brand identities, 3D visualizations, experiental design and print.</p>
+                    <p>I like to a maintain grounded, supportive and process driven environment.</p>
+                </div>
+            </div>
+            <div class="right-side col-lg-6 order-1 order-lg-2 flex-column flex-lg-row p-0">
+                <img src="assets/img/karan.png" alt="Hiring">
+            </div>
         </div>
         <div class="container clients-section">
             <h2 class="main-title d-none d-lg-block ">We work with high impact clients that would look good on your resume</h2>
