--- a/index.html
+++ b/index.html
@@ -157,8 +157,19 @@
             
         </div>
         <div class="container main-container video-section">
-            <img class=" d-none d-lg-block" src="assets/img/video-section.png" alt="video section" width="100%">
-            <img class=" d-block d-lg-none" src="assets/img/video-section-mob.png" alt="video section" width="100%">
+            <div class="video-section-wrapper">
+                <div class="floatleft quote">
+                    <img class="d-block d-lg-none" src="assets/img/quotes.png" alt="Quote">
+                    <p class="main-title">You're not alone,</p>
+                </div>
+                <h3 class="floatleft main-title">hear from our co-founder.</h3>
+                <hr class="d-none d-lg-block floatleft seperator">
+                <div class="video-container">
+                    <img src="assets/img/anuj.png" alt="Anuj Khurana">
+                </div>
+                <p class="floatleft para">We are looking to double our design team to 10 awesome team members over the next 12 months. Come grow with us! If this sounds like your kind of gig, then go ahead and apply.</p>
+                <p class="floatleft author-name">- Anuj Khurana</p>
+            </div>
         </div>
         <div class="container process-section">
             <h2 class="main-title ">Our 7-Day Selection Process</h2>
