Keep scrolling section

--- a/index.html
+++ b/index.html
@@ -96,9 +96,17 @@
                 </div>
             </div>
          </div>
-        <div class="container main-container black-section">
-            <img class=" d-none d-lg-block" src="assets/img/section-2.svg" alt="section-2" width="100%">
-            <img class=" d-block d-lg-none" src="assets/img/section-2-mob.svg" alt="section-2" width="100%">
+        <div class="container main-container black-section keep-scrolling-section">
+            <div class="scroll-wrap">
+                <h3 class="main-title scroll-title">is it time for you...</h3>
+                <div class="item-container">
+                    <div class="col-12 col-lg-3 scroll-item">...to interact with clients and stakeholders and sell your design?</div>
+                    <div class="col-12 col-lg-3 scroll-item">...to see your designs NOT get botched in execution?</div>
+                    <div class="col-12 col-lg-3 scroll-item">...to transform from a solo contributor to a team player?</div>
+                    <div class="col-12 col-lg-3 scroll-item">...to claim your freedom to work from anywhere and redefine an age old tradition?</div>
+                </div>
+                <h3 class="main-title scroll-title">...to keep scrolling?</h3>
+            </div>
         </div>
         <div class="container main-container d-flex flex-wrap hiring-team-section">
             <div class="container main-container">
