--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <img src="assets/img/karan.png" alt="Hiring">
             </div>
         </div>
-        <div class="container clients-section">
+        <div class="container main-container clients-section">
             <h2 class="main-title d-none d-lg-block ">We work with high impact clients that would look good on your resume</h2>
             <h2 class="main-title d-block d-lg-none">Work with high impact clients</h2>
             <div id="clients-slick" class="slider">
@@ -179,13 +179,13 @@
                 <p class="floatleft author-name">- Anuj Khurana</p>
             </div>
         </div>
-        <div class="container process-section">
+        <div class="container main-container process-section">
             <h2 class="main-title ">Our 7-Day Selection Process</h2>
             <div id="process-slick" class="slider">
                 <div class="item">
                     <img class="item-logo" src="assets/img/1.svg">
                     <p>Write us a few words about yourself, your work and tell us what makes you the right fit for this
-                        team</p>
+                        team.</p>
                 </div>
                 <div class="item">
                     <img class="item-logo" src="assets/img/2.svg">
