--- a/index.html
+++ b/index.html
@@ -131,17 +131,17 @@
             <h2 class="main-title d-block d-lg-none">Work with high impact clients</h2>
             <div id="clients-slick" class="slider">
                 <div class="item">
-                    <img class="item-logo" src="assets/img/cibil.svg">
+                    <a href="https://www.cibil.com/" target="_blank"><img class="item-logo" src="assets/img/cibil.svg"></a>
                     <img class="item-gif" src="assets/img/CIBIL 2.svg">
                     <p>India's largest credit bureau with more data on users than Twitter & Youtube combined.</p>
                 </div>
                 <div class="item">
-                    <img class="item-logo" src="assets/img/HK.svg">
+                    <a href="https://www.healthkart.com/" target="_blank"><img class="item-logo" src="assets/img/HK.svg"></a>
                     <img class="item-gif" src="assets/img/HK 2.svg">
                     <p>Healthkart is India’s leading nutrition and supplement platform. Backed by Sequoia & Intel Capital.</p>
                 </div>
                 <div class="item">
-                    <img class="item-logo" src="assets/img/oyo.svg">
+                    <a href="https://www.oyorooms.com/" target="_blank"><img class="item-logo" src="assets/img/oyo.svg"></a>
                     <img class="item-gif" src="assets/img/oyo 2.svg">
                     <p>A global travel tech company that connects its patrons and guests. Backed by Softbank & Microsoft.</p>
                 </div>
@@ -152,13 +152,13 @@
             <div class="icon-container">
                 <div id="icon-slick" class="icon-slider">
                     <div class="item">
-                        <img class="icon-logo" src="assets/img/careervira.svg">
+                        <a href="https://www.airmeet.com/"><img class="icon-logo" src="assets/img/airmeet-logo.svg"></a>
                     </div>
                     <div class="item">
                         <img class="icon-logo" src="assets/img/bueno finance.svg">
                     </div>
                     <div class="item">
-                        <img class="icon-logo" src="assets/img/pawpurrfect.svg">
+                        <a href="https://www.turtlemint.com/"><img class="icon-logo" src="assets/img/turtlemint-logo.svg"></a>
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
             <div class="video-section-wrapper">
                 <div class="floatleft quote">
                     <img class="d-block d-lg-none" src="assets/img/quotes.png" alt="Quote">
-                    <p class="main-title">You're not alone,</p>
+                    <p class="main-title">We are growing,</p>
                 </div>
                 <h3 class="floatleft main-title">hear from our co-founder.</h3>
                 <hr class="d-none d-lg-block floatleft seperator">
