--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
             <div class="icon-container">
                 <div id="icon-slick" class="icon-slider">
                     <div class="item">
-                        <a href="https://www.airmeet.com/"><img class="icon-logo" src="assets/img/airmeet-logo.svg"></a>
+                        <a href="https://www.airmeet.com/" target="_blank"><img class="icon-logo" src="assets/img/airmeet-logo.svg"></a>
                     </div>
                     <div class="item">
                         <img class="icon-logo" src="assets/img/bueno finance.svg">
                     </div>
                     <div class="item">
-                        <a href="https://www.turtlemint.com/"><img class="icon-logo" src="assets/img/turtlemint-logo.svg"></a>
+                        <a href="https://www.turtlemint.com/" target="_blank"><img class="icon-logo" src="assets/img/turtlemint-logo.svg"></a>
                     </div>
                 </div>
             </div>
