Updated client section heading

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
         </div>
         <div class="container main-container clients-section">
-            <h2 class="main-title d-none d-lg-block ">We work with high impact clients that would look good on your resume</h2>
+            <h2 class="main-title d-none d-lg-block ">We work with high impact clients that look good in your portfolio</h2>
             <h2 class="main-title d-block d-lg-none">Work with high impact clients</h2>
             <div id="clients-slick" class="slider">
                 <div class="item">
